--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
 *******************************************************************************
 
 === 1.0.2 ===
-
+- Updated plugin metadata (contributed by Dennis Braun).
 
 === 1.0.1 ===
 * Initial release.
