--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
 
 === 1.0.2 ===
 - Updated plugin metadata (contributed by Dennis Braun).
+- Fixed clang warnings.
 
 === 1.0.1 ===
 * Initial release.
