--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,8 +3,9 @@
 *******************************************************************************
 
 === 1.0.2 ===
-- Updated plugin metadata (contributed by Dennis Braun).
-- Fixed clang warnings.
+* Updated plugin metadata (contributed by Dennis Braun).
+* Fixed clang warnings.
+* Updated dependencies and build scripts.
 
 === 1.0.1 ===
 * Initial release.
