--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
 
 === 1.0.3 ===
 * Added german translations (contributed by Johannes Guenther).
+* Updated build scripts and dependencies.
 
 === 1.0.2 ===
 * Updated plugin metadata (contributed by Dennis Braun).
